--- a/.travis.yml
+++ b/.travis.yml
@@ -30,10 +30,10 @@ before_install:
 - arduino-cli core update-index
 - echo "Install board..."
 # parameter is needed :-(
-- arduino-cli core install digistump:avr
+#- arduino-cli core install digistump:avr
 - arduino-cli core install ATTinyCore:avr
-- echo "Show all boards now available..."
-- arduino-cli board listall
+#- echo "Show all boards now available..."
+#- arduino-cli board listall
 install:
 - mkdir -p $HOME/Arduino/libraries
 - ln -s $PWD $HOME/Arduino/libraries/.
