--- a/.github/workflows/TestCompile.yml
+++ b/.github/workflows/TestCompile.yml
@@ -7,7 +7,23 @@
 
 # This is the name of the workflow, visible on GitHub UI.
 name: TestCompile
-on: [push, pull_request] # see: https://help.github.com/en/actions/reference/events-that-trigger-workflows#pull-request-event-pull_request
+on:
+  workflow_dispatch: # To run it manually
+    description: 'manual build check'
+  push: # see: https://help.github.com/en/actions/reference/events-that-trigger-workflows#pull-request-event-pull_request
+    paths:
+    - '**.ino'
+    - '**.cpp'
+    - '**.h'
+    - '**.hpp'
+    - '**TestCompile.yml'
+  pull_request:
+    paths:
+    - '**.ino'
+    - '**.cpp'
+    - '**.h'
+    - '**.hpp'
+    - '**TestCompile.yml'
 
 jobs:
   build:
