reduced period during open window detection to 8 seconds

--- a/.github/workflows/TestCompile.yml
+++ b/.github/workflows/TestCompile.yml
@@ -1,12 +1,13 @@
 # TestCompile.yml
 # Github workflow script to test compile all examples of an Arduino library repository.
 #
-# Copyright (C) 2020  Armin Joachimsmeyer
+# Copyright (C) 2020-2025  Armin Joachimsmeyer
 # https://github.com/ArminJo/Github-Actions
 #
 
 # This is the name of the workflow, visible on GitHub UI.
 name: TestCompile
+
 on:
   workflow_dispatch: # To run it manually
     description: 'manual build check'
@@ -14,15 +15,15 @@ on:
     paths:
     - '**.ino'
     - '**.cpp'
-    - '**.h'
     - '**.hpp'
+    - '**.h'
     - '**TestCompile.yml'
   pull_request:
     paths:
     - '**.ino'
     - '**.cpp'
-    - '**.h'
     - '**.hpp'
+    - '**.h'
     - '**TestCompile.yml'
 
 jobs:
